--- a/index.html
+++ b/index.html
@@ -302,12 +302,12 @@
         <!-- Мінімалістична донат-секція -->
 <section class="donation-section">
     <div style="text-align: center; margin: 20px 0; font-family: monospace;">
-        <span style="color: #ccc;">TRON (TRC-20):</span>
+        <span style="color: #ccc;">USDT TRC20:</span>
         <span style="color: #fff; font-weight: bold; cursor: pointer; padding: 5px 10px; background: rgba(255,215,0,0.1); border-radius: 4px; margin-left: 8px;" 
               onclick="copyAddress('TBFqyUHLUrv7dsH6kC82UBBDX4qcYCu1Kk')">
             TBFqyUHLUrv7dsH6kC82UBBDX4qcYCu1Kk
         </span>
-        <span style="color: #4ecdc4; margin-left: 8px;">USDT</span>
+        <span style="color: #4ecdc4; margin-left: 8px;">TRON</span>
     </div>
 </section>
 
