--- a/index.html
+++ b/index.html
@@ -300,30 +300,16 @@
         </main>
 
         <!-- Мінімалістична донат-секція -->
+<!-- Мінімалістична донат-секція -->
 <section class="donation-section">
     <div style="text-align: center; margin: 20px 0; font-family: monospace;">
         <span style="color: #ccc;">USDT (TRC-20):</span>
         <span style="color: #fff; font-weight: bold; cursor: pointer; padding: 5px 10px; background: rgba(255,215,0,0.1); border-radius: 4px; margin-left: 8px;" 
-              onclick="copyAddress('TBFqyUHLUrv7dsH6kC82UBBDX4qcYCu1Kk')">
+              onclick="copyToClipboard('TBFqyUHLUrv7dsH6kC82UBBDX4qcYCu1Kk')">
             TBFqyUHLUrv7dsH6kC82UBBDX4qcYCu1Kk
         </span>
     </div>
 </section>
-
-<script>
-function copyAddress(address) {
-    const currentLang = localStorage.getItem('language') || 'eng';
-    const successMessage = currentLang === 'ukr' ? 'Адресу скопійовано!' : 'Address copied!';
-    
-    navigator.clipboard.writeText(address).then(() => {
-        showNotification(successMessage, 'success');
-    }).catch(err => {
-        console.error('Помилка копіювання: ', err);
-        const errorMessage = currentLang === 'ukr' ? 'Помилка копіювання' : 'Copy error';
-        showNotification(errorMessage, 'error');
-    });
-}
-</script>
 
         <footer>
             <p data-eng="© 2024 ne3nayskas. All rights reserved." data-ukr="© 2024 ne3nayskas. Всі права захищені.">© 2024 ne3nayskas. All rights reserved.</p>
@@ -489,15 +475,6 @@ document.addEventListener('DOMContentLoaded', function() {
             setTimeout(updateAllTooltips, 100);
         });
     });
-    
-    // Додаємо обробник для кнопки копіювання адреси гаманця
-    const copyWalletBtn = document.querySelector('.wallet-address .copy-btn');
-    if (copyWalletBtn) {
-        copyWalletBtn.addEventListener('click', function() {
-            const walletAddress = this.parentElement.querySelector('span').textContent;
-            copyToClipboard(walletAddress);
-        });
-    }
 });
 </script>
 
