--- a/index.html
+++ b/index.html
@@ -308,6 +308,12 @@
       onclick="copyToClipboard(this.textContent)">
     TBFqyUHLUrv7dsH6kC82UBBDX4qcYCu1Kk
 </span>
+
+<span style="color: #ccc;">TON:</span>
+<span id="crypto-wallet" style="color: #fff; font-weight: bold; cursor: pointer; padding: 5px 10px; background: rgba(255,215,0,0.1); border-radius: 4px; margin-left: 8px;" 
+      onclick="copyToClipboard(this.textContent)">
+    UQA2NF78jCVRMj59LNpgR82moLsXA1Uo9fTakE-jbyCoM5zt
+</span>
     </div>
 </section>
 
