--- a/index.html
+++ b/index.html
@@ -303,17 +303,21 @@
 <!-- Мінімалістична донат-секція -->
 <section class="donation-section">
     <div style="text-align: center; margin: 20px 0; font-family: monospace;">
-<span style="color: #ccc;">USDT (TRC-20):</span>
-<span id="crypto-wallet" style="color: #fff; font-weight: bold; cursor: pointer; padding: 5px 10px; background: rgba(255,215,0,0.1); border-radius: 4px; margin-left: 8px;" 
-      onclick="copyToClipboard(this.textContent)">
-    TBFqyUHLUrv7dsH6kC82UBBDX4qcYCu1Kk
-</span>
-
-<span style="color: #ccc;">TON:</span>
-<span id="crypto-wallet" style="color: #fff; font-weight: bold; cursor: pointer; padding: 5px 10px; background: rgba(255,215,0,0.1); border-radius: 4px; margin-left: 8px;" 
-      onclick="copyToClipboard(this.textContent)">
-    UQA2NF78jCVRMj59LNpgR82moLsXA1Uo9fTakE-jbyCoM5zt
-</span>
+        <div style="margin-bottom: 15px;">
+            <span style="color: #ccc;">USDT (TRC-20):</span>
+            <span style="color: #fff; font-weight: bold; cursor: pointer; padding: 5px 10px; background: rgba(255,215,0,0.1); border-radius: 4px; margin-left: 8px;" 
+                  onclick="copyToClipboard(this.textContent)">
+                TBFqyUHLUrv7dsH6kC82UBBDX4qcYCu1Kk
+            </span>
+        </div>
+        
+        <div>
+            <span style="color: #ccc;">TON:</span>
+            <span style="color: #fff; font-weight: bold; cursor: pointer; padding: 5px 10px; background: rgba(255,215,0,0.1); border-radius: 4px; margin-left: 8px;" 
+                  onclick="copyToClipboard(this.textContent)">
+                UQA2NF78jCVRMj59LNpgR82moLsXA1Uo9fTakE-jbyCoM5zt
+            </span>
+        </div>
     </div>
 </section>
 
