--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         <!-- Мінімалістична донат-секція -->
 <!-- Мінімалістична донат-секція -->
 <section class="donation-section">
-    <div style="text-align: center; margin: 20px 0; font-family: monospace;">
+    <div style="text-align: left; margin: 20px 0; font-family: monospace;">
         <div style="margin-bottom: 15px;">
             <span style="color: #ccc;">USDT (TRC-20):</span>
             <span style="color: #fff; font-weight: bold; cursor: pointer; padding: 5px 10px; background: rgba(255,215,0,0.1); border-radius: 4px; margin-left: 8px;" 
