--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
     <div style="text-align: left; margin: 20px 0; font-family: monospace;">
         <div style="margin-bottom: 15px;">
             <span style="color: #26a17b; font-weight: bold;">USDT (TRC-20):</span>
-            <span style="color: #fff; font-weight: bold; cursor: pointer; padding: 5px 10px; background: rgba(255,215,0,0.1); border-radius: 4px; margin-left: 8px;" 
+            <span style="color: #26a17b; font-weight: cursor: pointer; padding: 5px 10px; background: rgba(255,215,0,0.1); border-radius: 4px; margin-left: 8px;" 
                   onclick="copyToClipboard(this.textContent)">
                 TBFqyUHLUrv7dsH6kC82UBBDX4qcYCu1Kk
             </span>
@@ -313,7 +313,7 @@
         
         <div>
             <span style="color: #0088cc; font-weight: bold;">TON:</span>
-            <span style="color: #fff; font-weight: bold; cursor: pointer; padding: 5px 10px; background: rgba(255,215,0,0.1); border-radius: 4px; margin-left: 8px;" 
+            <span style="color: #0088cc; font-weight: cursor: pointer; padding: 5px 10px; background: rgba(255,215,0,0.1); border-radius: 4px; margin-left: 8px;" 
                   onclick="copyToClipboard(this.textContent)">
                 UQA2NF78jCVRMj59LNpgR82moLsXA1Uo9fTakE-jbyCoM5zt
             </span>
