--- a/index.html
+++ b/index.html
@@ -303,17 +303,19 @@
 <!-- Мінімалістична донат-секція -->
 <section class="donation-section">
     <div style="text-align: left; margin: 20px 0; font-family: monospace;">
-        <div style="margin-bottom: 15px;">
-            <span style="color: #26a17b; font-weight: bold;">USDT (TRC-20):</span>
-            <span style="color: #26a17b; font-weight: cursor: pointer; padding: 5px 10px; background: rgba(255,215,0,0.1); border-radius: 4px; margin-left: 8px;" 
+        <div style="margin-bottom: 15px; display: flex; align-items: center;">
+            <span style="font-size: 1.2em; margin-right: 8px; color: #26a17b;">💳</span>
+            <span style="color: #26a17b; margin-right: 10px;">USDT (TRC-20):</span>
+            <span style="color: #26a17b; cursor: pointer; padding: 5px 10px; background: rgba(255,215,0,0.1); border-radius: 4px;" 
                   onclick="copyToClipboard(this.textContent)">
                 TBFqyUHLUrv7dsH6kC82UBBDX4qcYCu1Kk
             </span>
         </div>
         
-        <div>
-            <span style="color: #0088cc; font-weight: bold;">TON:</span>
-            <span style="color: #0088cc; font-weight: cursor: pointer; padding: 5px 10px; background: rgba(255,215,0,0.1); border-radius: 4px; margin-left: 8px;" 
+        <div style="display: flex; align-items: center;">
+            <span style="font-size: 1.2em; margin-right: 8px; color: #ff4444;">💳</span>
+            <span style="color: #0088cc; margin-right: 10px;">TON:</span>
+            <span style="color: #0088cc; cursor: pointer; padding: 5px 10px; background: rgba(255,215,0,0.1); border-radius: 4px;" 
                   onclick="copyToClipboard(this.textContent)">
                 UQA2NF78jCVRMj59LNpgR82moLsXA1Uo9fTakE-jbyCoM5zt
             </span>
