--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
 <!-- Мінімалістична донат-секція -->
 <section class="donation-section">
-    <div style="text-align: left; margin: 20px 0; font-family: monospace;">
+    <div style="text-align: center; margin: 16px 0; font-family: monospace;">
         <div style="margin-bottom: 15px; display: flex; align-items: center;">
             <span style="font-size: 1.2em; margin-right: 8px; color: #26a17b;">💳</span>
             <span style="color: #26a17b; margin-right: 10px;">USDT (TRC-20):</span>
