--- a/index.html
+++ b/index.html
@@ -302,19 +302,19 @@
 <!-- Мінімалістична донат-секція -->
 <section class="donation-section">
     <div style="text-align: center; margin: 16px 0; font-family: monospace;">
-        <div style="margin-bottom: 15px; display: flex; align-items: center;">
+        <div style="margin-bottom: 15px; display: flex; align-items: center; flex-wrap: wrap; justify-content: center;">
             <span style="font-size: 1.2em; margin-right: 8px; color: #26a17b;">💳</span>
             <span style="color: #26a17b; margin-right: 10px;">USDT (TRC-20):</span>
-            <span style="color: #26a17b; cursor: pointer; padding: 5px 5px; background: rgba(255,215,0,0.1); border-radius: 4px;" 
+            <span style="color: #26a17b; cursor: pointer; padding: 5px; background: rgba(255,215,0,0.1); border-radius: 4px; margin-top: 5px; word-break: break-all; font-size: 0.9em;" 
                   onclick="copyToClipboard(this.textContent)">
                 TBFqyUHLUrv7dsH6kC82UBBDX4qcYCu1Kk
             </span>
         </div>
         
-        <div style="display: flex; align-items: center;">
+        <div style="display: flex; align-items: center; flex-wrap: wrap; justify-content: center;">
             <span style="font-size: 1.2em; margin-right: 8px; color: #ff4444;">💳</span>
             <span style="color: #0088cc; margin-right: 10px;">TON:</span>
-            <span style="color: #0088cc; cursor: pointer; padding: 5px 5px; background: rgba(255,215,0,0.1); border-radius: 4px;" 
+            <span style="color: #0088cc; cursor: pointer; padding: 5px; background: rgba(255,215,0,0.1); border-radius: 4px; margin-top: 5px; word-break: break-all; font-size: 0.9em;" 
                   onclick="copyToClipboard(this.textContent)">
                 UQA2NF78jCVRMj59LNpgR82moLsXA1Uo9fTakE-jbyCoM5zt
             </span>
