--- a/index.html
+++ b/index.html
@@ -319,6 +319,15 @@
                 UQA2NF78jCVRMj59LNpgR82moLsXA1Uo9fTakE-jbyCoM5zt
             </span>
         </div>
+
+        <div style="display: flex; align-items: center; flex-wrap: wrap; justify-content: center;">
+            <span style="font-size: 1.2em; margin-right: 8px; color: #ff4444;">💳</span>
+            <span style="color: #ff7518; margin-right: 10px;">BTC:</span>
+            <span style="color: #ff7518; cursor: pointer; padding: 5px; background: rgba(255,215,0,0.1); border-radius: 4px; margin-top: 5px; word-break: break-all; font-size: 0.9em;" 
+                  onclick="copyToClipboard(this.textContent)">
+                bc1pju27alugynflg4a8c5yp3zhdphupcmwzee3nguyjmnsrvztu4kwsy0drfz
+            </span>
+        </div>
     </div>
 </section>
 
