--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
                 <code>https://ne3nayskas.github.io/plugins/logo.js</code>
             </div>
 
-            <!-- Networks -->
+            <!-- Networks by @levende-->
             <div class="plugin-card">
-                <h2>Networks</h2>
+                <h2>Networks by @levende</h2>
                 <p data-eng="Plugin adds production platforms for movies and series in Lampa cards" data-ukr="Плагін додає платформи виробництва фільмів і серіалів в картках Lampa">Plugin adds production platforms for movies and series in Lampa cards</p>
                 <div class="links">
                     <a href="networks.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
@@ -276,6 +276,17 @@
                     <a href="https://ne3nayskas.github.io/plugins/quality.js" class="btn">URL-link</a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/quality.js</code>
+            </div>
+
+            <!-- Seasons by @K031k -->
+            <div class="plugin-card">
+                <h2>Seasons by @K031k</h2>
+                <p data-eng="Plugin shows season/series info on movies cards" data-ukr="Плагін показує на картках фільмів інформацію про сезон/серії">Plugin removes Trailers button in movie cards</p>
+                <div class="links">
+                    <a href="seasons.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
+                    <a href="https://ne3nayskas.github.io/plugins/seasons.js" class="btn">URL-link</a>
+                </div>
+                <code>https://ne3nayskas.github.io/plugins/seasons.js</code>
             </div>
 
             <!-- NoTrailers -->
