--- a/index.html
+++ b/index.html
@@ -313,6 +313,17 @@
 <!-- Мінімалістична донат-секція -->
 <section class="donation-section">
     <div style="text-align: center; margin: 16px 0; font-family: monospace;">
+        <!-- Шапка секції -->
+        <div style="margin-bottom: 20px;">
+            <h3 style="color: #FFD700; font-size: 1.4em; margin: 0; display: flex; align-items: center; justify-content: center; gap: 10px;">
+                <span>🎁</span>
+                <span data-eng="Donate" data-ukr="Донат">Донат</span>
+            </h3>
+            <p style="color: #ccc; font-size: 0.9em; margin: 5px 0 0 0;">
+                <span data-eng="Support the project development" data-ukr="Підтримайте розвиток проєкту">Підтримайте розвиток проєкту</span>
+            </p>
+        </div>
+
         <div style="margin-bottom: 15px; display: flex; align-items: center; flex-wrap: wrap; justify-content: center;">
             <span style="font-size: 1.2em; margin-right: 8px; color: #26a17b;">💳</span>
             <span style="color: #26a17b; margin-right: 10px;">USDT (TRC-20):</span>
