--- a/index.html
+++ b/index.html
@@ -281,10 +281,15 @@
             <!-- Seasons by @K031k -->
             <div class="plugin-card">
                 <h2>Seasons by @K031k</h2>
-                <p data-eng="Plugin shows season/series info on movies cards" data-ukr="Плагін показує на картках фільмів інформацію про сезон/серії">Plugin removes Trailers button in movie cards</p>
+                <p data-eng="Plugin shows season/series info on movies cards" data-ukr="Плагін показує на картках фільмів інформацію про сезон/серії">Plugin shows season/series info on movies cards</p>
                 <div class="links">
                     <a href="seasons.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
-                    <a href="https://ne3nayskas.github.io/plugins/seasons.js" class="btn">URL-link</a>
+                    <a href="https://ne3nayskas.github.io/plugins/seasons.js" 
+                       class="btn" 
+                       target="_blank" 
+                       rel="noopener noreferrer">
+                       URL-link
+                    </a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/seasons.js</code>
             </div>
