--- a/index.html
+++ b/index.html
@@ -174,7 +174,12 @@
                 <p data-eng="Plugin for adding ratings: Imdb, Tmdb, MetaCritic, RottenTomatoes" data-ukr="Плагін для додавання рейтингів: Imdb, Tmdb, MetaCritic, RottenTomato">Plugin for adding ratings: Imdb, Tmdb, MetaCritic, RottenTomatoes</p>
                 <div class="links">
                     <a href="rating_omdb.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
-                    <a href="https://ne3nayskas.github.io/plugins/rating_omdb.js" class="btn">URL-link</a>
+                    <a href="https://ne3nayskas.github.io/plugins/rating_omdb.js" 
+                       class="btn" 
+                       target="_blank" 
+                       rel="noopener noreferrer">
+                       URL-link
+                    </a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/rating_omdb.js</code>
             </div>
@@ -185,7 +190,12 @@
                 <p data-eng="Plugin for adding color rating plugin on movie cards in Lampa" data-ukr="Плагін кольорового рейтингу на картках фільмів в Lampa">Color rating plugin on movie cards in Lampa</p>
                 <div class="links">
                     <a href="vote_colour.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
-                    <a href="https://ne3nayskas.github.io/plugins/vote_colour.js" class="btn">URL-link</a>
+                    <a href="https://ne3nayskas.github.io/plugins/vote_colour.js" 
+                       class="btn" 
+                       target="_blank" 
+                       rel="noopener noreferrer">
+                       URL-link
+                    </a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/vote_colour.js</code>
             </div>
@@ -196,7 +206,12 @@
                 <p data-eng="Plugin for adding collections: Netflix, Prime, AppleTv, HBO, Hulu, Disney" data-ukr="Плагін для додавання підбірок: Netflix, Prime, AppleTv, HBO, Hulu, Disney">Plugin for adding collections: Netflix, Prime, AppleTv, HBO, Hulu, Disney</p>
                 <div class="links">
                     <a href="p.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
-                    <a href="https://ne3nayskas.github.io/plugins/p.js" class="btn">URL-link</a>
+                    <a href="https://ne3nayskas.github.io/plugins/p.js" 
+                       class="btn" 
+                       target="_blank" 
+                       rel="noopener noreferrer">
+                       URL-link
+                    </a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/p.js</code>
             </div>
@@ -207,7 +222,12 @@
                 <p data-eng="Plugin for adding styling Torrents results for Lampa" data-ukr="Плагін для додавання стилізації результатів Torrents">Plugin for styling Torrents results</p>
                 <div class="links">
                     <a href="torr_styles.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
-                    <a href="https://ne3nayskas.github.io/plugins/torr_styles.js" class="btn">URL-link</a>
+                    <a href="https://ne3nayskas.github.io/plugins/torr_styles.js" 
+                       class="btn" 
+                       target="_blank" 
+                       rel="noopener noreferrer">
+                       URL-link
+                    </a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/torr_styles.js</code>
             </div>
@@ -218,7 +238,12 @@
                 <p data-eng="Plugin for adding styled buttons: Online/Torrent/Trailers" data-ukr="Плагін для додавання стилізованих кнопок: Online/Torrent/Trailers">Plugin for adding styled buttons: Online/Torrent/Trailers</p>
                 <div class="links">
                     <a href="3buttons.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
-                    <a href="https://ne3nayskas.github.io/plugins/3buttons.js" class="btn">URL-link</a>
+                    <a href="https://ne3nayskas.github.io/plugins/3buttons.js" 
+                       class="btn" 
+                       target="_blank" 
+                       rel="noopener noreferrer">
+                       URL-link
+                    </a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/3buttons.js</code>
             </div>
@@ -229,7 +254,12 @@
                 <p data-eng="Plugin for adding cache clear button in Lampa header" data-ukr="Плагін додавання кнопки очистки кеш в шапку Lampa">Plugin for adding cache clear button in Lampa header</p>
                 <div class="links">
                     <a href="cache.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
-                    <a href="https://ne3nayskas.github.io/plugins/cache.js" class="btn">URL-link</a>
+                    <a href="https://ne3nayskas.github.io/plugins/cache.js" 
+                       class="btn" 
+                       target="_blank" 
+                       rel="noopener noreferrer">
+                       URL-link
+                    </a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/cache.js</code>
             </div>
@@ -240,7 +270,12 @@
                 <p data-eng="Plugin for adding Exit button in Lampa for left menu" data-ukr="Плагін додавання кнопки Вихід - в меню Lampa">Plugin for adding Exit button in Lampa menu</p>
                 <div class="links">
                     <a href="exit.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
-                    <a href="https://ne3nayskas.github.io/plugins/exit.js" class="btn">URL-link</a>
+                    <a href="https://ne3nayskas.github.io/plugins/exit.js" 
+                       class="btn" 
+                       target="_blank" 
+                       rel="noopener noreferrer">
+                       URL-link
+                    </a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/exit.js</code>
             </div>
@@ -251,7 +286,12 @@
                 <p data-eng="Plugin for adding movie logos instead of titles in Lampa cards" data-ukr="Плагін додавання логотипів фільмів - замість назви, в картках Lampa">Plugin for adding movie logos instead of titles in Lampa cards</p>
                 <div class="links">
                     <a href="logo.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
-                    <a href="https://ne3nayskas.github.io/plugins/logo.js" class="btn">URL-link</a>
+                    <a href="https://ne3nayskas.github.io/plugins/logo.js" 
+                       class="btn" 
+                       target="_blank" 
+                       rel="noopener noreferrer">
+                       URL-link
+                    </a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/logo.js</code>
             </div>
@@ -262,7 +302,12 @@
                 <p data-eng="Plugin adds production platforms for movies and series in Lampa cards" data-ukr="Плагін додає платформи виробництва фільмів і серіалів в картках Lampa">Plugin adds production platforms for movies and series in Lampa cards</p>
                 <div class="links">
                     <a href="networks.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
-                    <a href="https://ne3nayskas.github.io/plugins/networks.js" class="btn">URL-link</a>
+                    <a href="https://ne3nayskas.github.io/plugins/networks.js" 
+                       class="btn" 
+                       target="_blank" 
+                       rel="noopener noreferrer">
+                       URL-link
+                    </a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/networks.js</code>
             </div>
@@ -273,7 +318,12 @@
                 <p data-eng="Plugin adds maximum available quality marks for movies" data-ukr="Плагін додає відмітки максимально можливої якості існуючої на фільмах">Plugin adds maximum available quality marks for movies</p>
                 <div class="links">
                     <a href="quality.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
-                    <a href="https://ne3nayskas.github.io/plugins/quality.js" class="btn">URL-link</a>
+                    <a href="https://ne3nayskas.github.io/plugins/quality.js" 
+                       class="btn" 
+                       target="_blank" 
+                       rel="noopener noreferrer">
+                       URL-link
+                    </a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/quality.js</code>
             </div>
@@ -300,7 +350,12 @@
                 <p data-eng="Plugin removes Trailers button in movie cards" data-ukr="Плагін прибирає кнопку Трейлери в картках фільмів">Plugin removes Trailers button in movie cards</p>
                 <div class="links">
                     <a href="notrailers.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
-                    <a href="https://ne3nayskas.github.io/plugins/notrailers.js" class="btn">URL-link</a>
+                    <a href="https://ne3nayskas.github.io/plugins/notrailers.js" 
+                       class="btn" 
+                       target="_blank" 
+                       rel="noopener noreferrer">
+                       URL-link
+                    </a>
                 </div>
                 <code>https://ne3nayskas.github.io/plugins/notrailers.js</code>
             </div>
