--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
             <!-- Torr Styles -->
             <div class="plugin-card">
-                <h2>Torr Styles</h2>
+                <h2>Torr Styles by ne3nayskas</h2>
                 <p data-eng="Plugin for adding styling Torrents results for Lampa" data-ukr="Плагін для додавання стилізації результатів Torrents">Plugin for styling Torrents results</p>
                 <div class="links">
                     <a href="torr_styles.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
@@ -250,7 +250,7 @@
 
             <!-- Cache -->
             <div class="plugin-card">
-                <h2>Cache</h2>
+                <h2>Cache by ne3nayskas</h2>
                 <p data-eng="Plugin for adding cache clear button in Lampa header" data-ukr="Плагін додавання кнопки очистки кеш в шапку Lampa">Plugin for adding cache clear button in Lampa header</p>
                 <div class="links">
                     <a href="cache.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
