--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             <!-- Cache -->
             <div class="plugin-card">
                 <h2>Cache by ne3nayskas</h2>
-                <p data-eng="Plugin for adding cache clear button in Lampa header" data-ukr="Плагін додавання кнопки очистки кеш в шапку Lampa">Plugin for adding cache clear button in Lampa header</p>
+                <p data-eng="Plugin for adding cache clear button in Lampa header" data-ukr="Плагін стилізації кнопок для 3buttons і кнопки кеш в шапку Lampa">Plugin for adding cache clear button in Lampa header</p>
                 <div class="links">
                     <a href="cache.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
                     <a href="https://ne3nayskas.github.io/plugins/cache.js" 
