--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             <!-- Other plugins -->
             <div class="plugin-card">
                 <h2 data-eng="Other plugins" data-ukr="Інші плагіни">Other plugins</h2>
-                <p data-eng="Your future plugins can be here" data-ukr="Тут можуть бути ваші майбутні плагіни">Your future plugins can be here</p>
+                <p data-eng="Your future plugins can be here ... 😍" data-ukr="Тут можуть бути ваші майбутні плагіни ... 😍">Your future plugins can be here</p>
                 <div class="links">
                     <a href="#" class="btn" data-eng="Coming soon..." data-ukr="Скоро...">Coming soon...</a>
                 </div>
@@ -361,7 +361,7 @@
         <div style="margin-bottom: 20px;">
             <h3 style="color: #FFD700; font-size: 1.4em; margin: 0; display: flex; align-items: center; justify-content: center; gap: 10px;">
                 <span>🎁</span>
-                <span data-eng="Donate" data-ukr="Донат">Донат</span>
+                <span data-eng="Donate 😍" data-ukr="Донат 😍">Донат</span>
             </h3>
             <p style="color: #ccc; font-size: 0.9em; margin: 5px 0 0 0;">
                 <span data-eng="Support the project development" data-ukr="Підтримайте розвиток проєкту">Підтримайте розвиток проєкту</span>
