--- a/index.html
+++ b/index.html
@@ -312,6 +312,22 @@
                 <code>https://ne3nayskas.github.io/plugins/notrailers.js</code>
             </div>
 
+            <!-- reDirect -->
+            <div class="plugin-card">
+                <h2>reDirect</h2>
+                <p data-eng="reDirect to you server lampac#" data-ukr="Плагін reDirect для вашого сервера Lampac">reDirect to you server lampac#</p>
+                <div class="links">
+                    <a href="redirect.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
+                    <a href="https://ne3nayskas.github.io/plugins/redirect.js" 
+                       class="btn" 
+                       target="_blank" 
+                       rel="noopener noreferrer">
+                       URL-link
+                    </a>
+                </div>
+                <code>https://ne3nayskas.github.io/plugins/redirect.js</code>
+            </div>
+
             <!-- Other plugins -->
             <div class="plugin-card">
                 <h2 data-eng="Other plugins" data-ukr="Інші плагіни">Other plugins</h2>
