--- a/index.html
+++ b/index.html
@@ -328,6 +328,22 @@
                 <code>https://ne3nayskas.github.io/plugins/redirect.js</code>
             </div>
 
+            <!-- iptv -->
+            <div class="plugin-card">
+                <h2>iptv</h2>
+                <p data-eng="Plugin for adding iptv" data-ukr="Плагін iptv">Plugin for adding iptv</p>
+                <div class="links">
+                    <a href="iptv.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
+                    <a href="https://ne3nayskas.github.io/plugins/iptv.js" 
+                       class="btn" 
+                       target="_blank" 
+                       rel="noopener noreferrer">
+                       URL-link
+                    </a>
+                </div>
+                <code>https://ne3nayskas.github.io/plugins/iptv.js</code>
+            </div>
+
             <!-- Other plugins -->
             <div class="plugin-card">
                 <h2 data-eng="Other plugins" data-ukr="Інші плагіни">Other plugins</h2>
