--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 
             <!-- iptv -->
             <div class="plugin-card">
-                <h2>iptv</h2>
+                <h2>iptv l@mpa plugins</h2>
                 <p data-eng="Plugin for adding iptv" data-ukr="Плагін iptv">Plugin for adding iptv</p>
                 <div class="links">
                     <a href="iptv.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
