--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <main>
             <!-- Torr Styles -->
             <div class="plugin-card">
-                <h2>Torr Styles by ne3nayskas</h2>
+                <h2>Torr Styles</h2>
                 <p data-eng="Plugin for adding styling Torrents results for Lampa" data-ukr="Плагін для додавання стилізації результатів Torrents">Plugin for styling Torrents results</p>
                 <div class="links">
                     <a href="torr_styles.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
@@ -232,9 +232,9 @@
                 <code>https://ne3nayskas.github.io/plugins/quality.js</code>
             </div>
 
-            <!-- Seasons by @K031k -->
+            <!-- Seasons -->
             <div class="plugin-card">
-                <h2>Seasons by @K031k</h2>
+                <h2>Seasons</h2>
                 <p data-eng="Plugin shows season/series info on movies cards" data-ukr="Плагін показує на картках фільмів інформацію про сезон/серії">Plugin shows season/series info on movies cards</p>
                 <div class="links">
                     <a href="seasons.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
