--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <!-- iptv -->
             <div class="plugin-card">
                 <h2>iptv</h2>
-                <p data-eng="Plugin for adding iptv" data-ukr="Плагін iptv">Plugin for adding iptv</p>
+                <p data-eng="Plugin for adding iptv to Lampa" data-ukr="Плагін для перегляду iptv в Lampa">Plugin for adding iptv</p>
                 <div class="links">
                     <a href="iptv.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
                     <a href="https://ne3nayskas.github.io/plugins/iptv.js" 
