--- a/index.html
+++ b/index.html
@@ -264,6 +264,22 @@
                 <code>https://ne3nayskas.github.io/plugins/notrailers.js</code>
             </div>
 
+            <!-- etor -->
+            <div class="plugin-card">
+                <h2>etor</h2>
+                <p data-eng="Plugin for adding parser and torrserver items to the Lampa settings menu" data-ukr="Плагін для додавання в меню налаштувань Lampa пунктів парсер і торрсервер">Plugin for adding parser and torrserver items to the Lampa settings menu</p>
+                <div class="links">
+                    <a href="etor.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
+                    <a href="https://ne3nayskas.github.io/plugins/etor.js" 
+                       class="btn" 
+                       target="_blank" 
+                       rel="noopener noreferrer">
+                       URL-link
+                    </a>
+                </div>
+                <code>https://ne3nayskas.github.io/plugins/etor.js</code>
+            </div>
+
             <!-- iptv -->
             <div class="plugin-card">
                 <h2>iptv</h2>
