--- a/index.html
+++ b/index.html
@@ -285,15 +285,15 @@
                 <h2>iptv</h2>
                 <p data-eng="Plugin for adding iptv to Lampa" data-ukr="Плагін для перегляду iptv в Lampa">Plugin for adding iptv</p>
                 <div class="links">
-                    <a href="iptv.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
-                    <a href="https://ne3nayskas.github.io/plugins/iptv.js" 
+                    <a href="iptv_tv.js" download class="btn" data-eng="Download" data-ukr="Завантажити">Download</a>
+                    <a href="https://ne3nayskas.github.io/plugins/iptv_tv.js" 
                        class="btn" 
                        target="_blank" 
                        rel="noopener noreferrer">
                        URL-link
                     </a>
                 </div>
-                <code>https://ne3nayskas.github.io/plugins/iptv.js</code>
+                <code>https://ne3nayskas.github.io/plugins/iptv_tv.js</code>
             </div>
 
             <!-- Other plugins -->
